# drone

./: .gitignore  .gitmodules
hw/: IMU.sch  RF.sch  drone-cache.lib  drone.kicad_pcb  drone.net  drone.pro  drone.sch  fp-info-cache  uSD.sch
include/: i2c.hpp  logger.hpp  mpu6050.hpp  sempahore.hpp
src/: main.cpp
sw/flight-control/: Cargo.toml  messages  rules.mk
sw/flight-control/inc/: dma.hpp  gpio.hpp  gps_task.hpp  i2c.hpp  logger.hpp  lsm9ds1.hpp  message_buffer.hpp  mpu6050.hpp  neo6m.hpp  semaphore.hpp  sml.hpp  spi.hpp  stm32f103.hpp  telemetry_task.hpp  uart.hpp  util.hpp
sw/flight-control/inc/FreeRTOS/: FreeRTOSConfig.h
sw/flight-control/src/: Makefile  gps_task.cpp  list.c  logger.cpp  main.cpp  main.rs  message_buffer.cpp  port.c  queue.c  semaphore.cpp  sempahore.cpp  stream_buffer.c  tasks.c  telemetry_task.cpp
sw/messages/: README.md  build.sh  gnss.yml  imu.yml  software.yml
sw/messages/cpp/: GNSS.cpp  GNSS.hpp  IMU.cpp  IMU.hpp  SOFTWARE.cpp  SOFTWARE.hpp  messages.cpp  messages.hpp
sw/messages/scripts/: generate_cpp.py  message.py
sw/messages/scripts/templates/: cpp_template.templ  cpp_template_system.cpp  cpp_template_system.h  cpp_template_system.templ  cpp_template_top.cpp  cpp_template_top.h  cpp_template_top.templ
sw/sdr/gr-fhss/: CMakeLists.txt  MANIFEST.md
sw/sdr/gr-fhss/apps/: CMakeLists.txt
sw/sdr/gr-fhss/docs/: CMakeLists.txt  README.fhss
sw/sdr/gr-fhss/grc/: CMakeLists.txt
sw/sdr/gr-fhss/lib/: CMakeLists.txt  lfsr.cc
sw/sdr/gr-fhss/python/: CMakeLists.txt  __init__.py
sw/sdr/gr-fhss/swig/: CMakeLists.txt  (+1 more)
(+11 files in other folders)
