[package]
authors = ["Tyler Jones me@tjones.dev"]
edition = "2018"
readme = "README.md"
name = "flight-control"
version = "0.1.0"

[workspace]
members = [
    "lib/stm32f1xx-hal"
]

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
stm32f1xx-hal = {path = "lib/stm32f1xx-hal", features = ["stm32f100", "rt"]}


# this lets you use `cargo fix`!
[[bin]]
name = "flight-control"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
